# TVM-Prep-guide

./: .gitignore  AGENTS.md  LICENSE  Pi_instructions.md  README.md  TVM-Prep-Guide.md  compile_instructions.md  requirements.txt  tvm_setup_outdated.md
.devcontainer/cpu/: Dockerfile  devcontainer.json
.devcontainer/cpu-only/: Dockerfile  devcontainer.json
.devcontainer/gpu/: Dockerfile  devcontainer.json
.devcontainer/gpu-enabled/: Dockerfile  devcontainer.json
.devcontainer/scripts/: build-tvm.sh  install-python-deps.sh
compilation/: build_runtime.sh  compile.py  targets.py
docs/: README.md  cpp-runtime.md  cross-compilation.md  deployment.md  devcontainer.md  model-frontends.md  python-runtime.md  targets.md  tvm-build.md
examples/: README.md
examples/assets/: README.md
examples/cpp/: CMakeLists.txt  run_tvm_graph.cpp  stb_image.h
examples/python/: compile_model.py  run_model.py
examples/python/tvm_prep/: __init__.py  compile.py  model_zoo.py  preprocess.py  runtime.py  targets.py
examples/targets/: target_profiles.py
notebooks/: 00_environment_check.ipynb  00_tvm_prep_guide.ipynb  01_compile_runtime_tests.ipynb  01_load_models.ipynb  01_onnx_image_classifier.ipynb  02_adding_models_and_raspberry_pi.ipynb  02_import_to_tvm.ipynb  03_compile_for_targets.ipynb  03_plain_tvm_api_workflow.ipynb  04_export_artifacts.ipynb  05_run_python_runtime.ipynb  MNIST_CNN_preparation.ipynb  MobileNetV2_preparation.ipynb  PiTest.ipynb  README.md  ShuffleNetV2_preparation.ipynb  Squeeze.ipynb  SqueezeNet.ipynb  TinyMLP_preparation.ipynb  compile_onnx.ipynb  compile_onnx_with_tvm.py  resnet.ipynb  test_tvm_cpu.py  tvm_random.ipynb  tvm_to_lib.ipynb  tvm_to_lib_deprecated.ipynb
tvm_cpp/: .clang-format  CMakeLists.txt  README.md  TARGET_INSTRUCTIONS.md  compile_resnet.sh  main.cpp  main_old.cpp  run_model.cpp  run_resnet.cpp  run_tvm.cpp  stb_image.h  test.cpp
tvm_cpp/artifacts/: labels.txt
tvm_py/: compile_tvm_cpu.py  export_resnet_onnx.py  run_tvm_inference.py
